--- a/build.yaml
+++ b/build.yaml
@@ -66,35 +66,14 @@ include:
     cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
     artifact-name: nice_lily58_right_oled
 
-  # peripheral_left
-  #- board: nice_nano_v2
-    #shield: lily58_left_peripheral nice_oled
-    #cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    #artifact-name: nice_lily58_left_peripheral_oled
-
-  # Xiao_Dongle
-  #- board: seeeduino_xiao_ble
-    #shield: lily58_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64 dongle_display
-    #cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_X\" -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    #artifact-name: xiao_lily58_dongle_xiao_oled
-    #snippet: studio-rpc-usb-uart
-
-  # ProMicro_Dongle
-  #- board: nice_nano_v2
-    #shield: lily58_dongle_pro_micro dongle_display
-    #cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    #artifact-name: nice_lily58_dongle_oled
-    #snippet: studio-rpc-usb-uart
-  ### LILY58 END ###
-
   ### SETTINGS_RESET START ###
-  - board: nice_nano_v2
-    shield: settings_reset
-    artifact-name: nice_settings_reset
-  - board: seeeduino_xiao_ble
-    shield: settings_reset
-    artifact-name: xiao_settings_reset
-  - board: puchi_ble_v1
-    shield: settings_reset
-    artifact-name: puchi_settings_reset
+  #- board: nice_nano_v2
+  #  shield: settings_reset
+  #  artifact-name: nice_settings_reset
+  #- board: seeeduino_xiao_ble
+    #shield: settings_reset
+    #artifact-name: xiao_settings_reset
+  #- board: puchi_ble_v1
+    #shield: settings_reset
+    #artifact-name: puchi_settings_reset
   ### SETTINGS_RESET END ###
