--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -30,7 +30,7 @@
 ### Keyboard name
 # CONFIG_ZMK_KEYBOARD_NAME="Nice Lily58 View"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 View"
-# CONFIG_ZMK_KEYBOARD_NAME="Nice Lily58 Oled"
+CONFIG_ZMK_KEYBOARD_NAME="Lily58 Oled"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 Oled"
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
@@ -98,7 +98,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 ### OLED DISPLAY
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
@@ -106,11 +106,11 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 ### WIDGET SETTINGS
 # No Widget configurations added since nice!view has its own custom widgets
 # activar solo estos dos widgets
-# CONFIG_ZMK_WIDGET_WPM_STATUS=n
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-# CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-# CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-# CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
 ### HID para nice!view ePaperDisplay
 # Enable eager debouncing
