--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -30,7 +30,7 @@
 ### Keyboard name
 # CONFIG_ZMK_KEYBOARD_NAME="Nice Lily58 View"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 View"
-CONFIG_ZMK_KEYBOARD_NAME="Lily58 Oled"
+# CONFIG_ZMK_KEYBOARD_NAME="Lily58 Oled"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 Oled"
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
