--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -30,7 +30,7 @@
 ### Keyboard name
 # CONFIG_ZMK_KEYBOARD_NAME="Nice Lily58 View"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 View"
-# CONFIG_ZMK_KEYBOARD_NAME="Lily58 Oled"
+# CONFIG_ZMK_KEYBOARD_NAME="Nice Lily58 Oled"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Lily58 Oled"
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
@@ -98,7 +98,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 ### OLED DISPLAY
 CONFIG_ZMK_DISPLAY=y
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
