--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -106,11 +106,11 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 ### WIDGET SETTINGS
 # No Widget configurations added since nice!view has its own custom widgets
 # activar solo estos dos widgets
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
-CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+#CONFIG_ZMK_WIDGET_WPM_STATUS=n
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 
 ### HID para nice!view ePaperDisplay
 # Enable eager debouncing
