--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -111,6 +111,7 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=n
 #CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 #CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 #CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_NICE_VIEW_GEM_ANIMATION=n
 
 ### HID para nice!view ePaperDisplay
 # Enable eager debouncing
