--- a/build.yaml
+++ b/build.yaml
@@ -56,24 +56,24 @@ include:
 
    ### LILY58 START ###
   # nice!oled lily58
-  - board: nice_nano_v2
-    shield: lily58_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_lily58_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: lily58_right nice_oled
-    cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_lily58_right_oled
+ # - board: nice_nano_v2
+    #shield: lily58_left nice_oled
+    #cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58_Oled\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    #artifact-name: nice_lily58_left_oled
+    #snippet: studio-rpc-usb-uart
+  #- board: nice_nano_v2
+    #shield: lily58_right nice_oled
+    #cmake-args: -DCONFIG_ZMK_SLEEP=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
+    #artifact-name: nice_lily58_right_oled
 
   ### SETTINGS_RESET START ###
-  #- board: nice_nano_v2
-    #shield: settings_reset
-    #artifact-name: nice_settings_reset
-  #- board: seeeduino_xiao_ble
-    #shield: settings_reset
-    #artifact-name: xiao_settings_reset
-  #- board: puchi_ble_v1
-    #shield: settings_reset
-    #artifact-name: puchi_settings_reset
+  - board: nice_nano_v2
+    shield: settings_reset
+    artifact-name: nice_settings_reset
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
+    artifact-name: xiao_settings_reset
+  - board: puchi_ble_v1
+    shield: settings_reset
+    artifact-name: puchi_settings_reset
   ### SETTINGS_RESET END ###
