--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -135,3 +135,6 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 ### DEBUG OPTIONS
 # CONFIG_ZMK_USB_LOGGING=y
 # CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+
+CONFIG_ZMK_USB=y
+CONFIG_ZMK_SPLIT=y
